# PixelSpark

./: DESIGN.md  README.md  requirements.txt
frontend/: pubspec.yaml
frontend/android/: build.gradle  gradle.properties
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/assets/models/: README.md
frontend/lib/: app.dart  main.dart
frontend/lib/constants/: app_constants.dart
frontend/lib/models/: edit_history.dart  filter_item.dart  image_data.dart  tool_item.dart
frontend/lib/providers/: editor_provider.dart
frontend/lib/screens/: editor_screen.dart  filters_screen.dart  home_screen.dart  splash_screen.dart
frontend/lib/services/: ml_service.dart  native_processor.dart  storage_service.dart
frontend/lib/theme/: app_theme.dart
frontend/lib/widgets/: adjustment_slider.dart  ai_loading_overlay.dart  before_after_slider.dart  crop_wrapper.dart  filter_slider.dart  filter_thumbnail.dart  loading_overlay.dart  save_dialog.dart  text_overlay_editor.dart  tool_button.dart
frontend/test/: bug_condition_test.dart  bug_exploration_results.md  widget_test.dart
frontend/tools/: generate_icon.dart
native/: CMakeLists.txt
native/include/: image_processor.h  utils.h
native/src/: image_processor.cpp  utils.cpp
native/src/adjustments/: brightness.cpp  contrast.cpp  detail_enhance.cpp  gamma.cpp  saturation.cpp  sharpen.cpp
native/src/blurs/: bilateral.cpp  gaussian_blur.cpp  median_blur.cpp
native/src/edge_detection/: canny.cpp  sobel.cpp
native/src/filters/: cartoon.cpp  color_sketch.cpp  emboss.cpp  ghibli_effect.cpp  grayscale.cpp  pencil_sketch.cpp  sepia.cpp  vintage.cpp
native/src/transforms/: flip.cpp  rotate.cpp
scripts/: build_apk.sh  run.sh
(+1 files in other folders)
